# trainingZachet

./: CMakeLists.txt  main.cpp
include/: tool.h
sources/: Tool.cpp
